fix: remove deps of opencv