@@ -40,16 +40,7 @@ dependencies {
     add("benchImplementation", "org.jetbrains.kotlinx:kotlinx-benchmark-runtime:0.4.16")
 }
 
-val libPath = "$rootDir/libs"
-
-tasks.withType<JavaExec> {
-    jvmArgs("-Djava.library.path=$libPath")
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
-}
-
 tasks.withType<Test> {
-    jvmArgs("-Djava.library.path=$libPath")
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
     useJUnitPlatform()
 }
 
@@ -68,12 +59,5 @@ ktlint {
 benchmark {
     targets {
         register("bench")
-    }
-}
-
-tasks.configureEach {
-    if (name == "benchBenchmark" && this is JavaExec) {
-        jvmArgs("-Djava.library.path=$libPath")
-        jvmArgs("--enable-native-access=ALL-UNNAMED")
     }
 }
